jena-shex/src/test/files/spec/negativeSyntax/1val1iriMinusiri1.shex
<http://a.example/IssueShape> {
   <http://a.example/p1> [<http://a.example/v1> - <http://a.example/v>]
}
